# nn_lib

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
examples/: benchmarking.rs  load_and_inference.rs  mlp_mnist.rs  reduction_cpu.rs  reduction_gpu.rs  test_cubecl.rs  websocket_server.rs
k8s/: deployment.yaml  service.yaml
src/: activation.rs  cost.rs  error.rs  initialization.rs  lib.rs  metrics.rs  model_io.rs  optimizer.rs  sequential.rs
src/layers/: activation.rs  convolutional.rs  dense.rs  mod.rs  pooling.rs  reshape.rs
src/metrics/: benchmark.rs  confusion_matrix.rs  history.rs  metrics.rs  metrics_type.rs  mod.rs  multiclass_classification.rs
src/tensor/: device.rs  error.rs  layout.rs  mod.rs  storage.rs  tensor.rs
src/tensor/backend/: backend.rs  backend_device.rs  backend_storage.rs  cpu.rs  cuda.rs  mod.rs
src/tensor/backend/cpu/: mod.rs  storage.rs
src/tensor/backend/cuda/: cuda_storage.rs
src/tensor/backend/metal/: buffer.rs  command_buffer.rs  command_semaphore.rs  commands.rs  compute_command_encoder.rs  compute_pipeline.rs  constant_values.rs  device.rs  error.rs  function.rs  function_constant_values.rs  kernel.rs  library.rs  mod.rs  source.rs  storage.rs  value.rs
src/tensor/backend/metal/encoder/: blit_command_encoder.rs  compute_command_encoder.rs  mod.rs
src/tensor/backend/metal/kernels/: add.metal  copy_strided.metal  matmul.metal  matmul_strided.metal  mul.metal  mul_scalar.metal  relu.metal  (+5 more)
src/tensor/storage/: cpu_storage.rs  cuda_storage.rs  metal_storage.rs  mod.rs  storage.rs
