[package]
name = "nn_lib"
version = "0.1.0"
edition = "2021"
authors = ["Adrien Pelfresne", "Alexis Vapaille"]

[dependencies]
log = "0.4.21"
pretty_env_logger = "0.5.0"
# ndarray = {version = "0.15.6", features = ["matrixmultiply-threading", "rayon", "blas"]}
ndarray = {version = "0.15.6", features = ["matrixmultiply-threading", "rayon"]}
ndarray-stats = "0.5.1"
# blas-src = { version = "0.8", default-features = false, features = ["accelerate"] }
ndarray-rand = "0.14.0"
num-traits = "0.2.19"
thiserror = "1.0.60"
rayon = "1.8"
rand = "0.8.5"
cubecl = "0.8.1"
cubecl-wgpu = "0.8.1"
cubecl-reduce = "0.8.1"
objc2-metal = { version = "0.3.2", optional = true }
objc2 = { version = "0.6.3", optional = true }
objc2-foundation = { version = "0.3.2", optional = true }

[dev-dependencies]
anyhow = "1.0"
flate2 = "1.0"
byteorder = "1.5"

[features]
metal = ["objc2", "objc2-metal", "objc2-foundation"]
